tests/test_proof/bad/output/no_vars-empty.catala_en.Proof
[RESULT] For this variable:
 --> test_proof/bad/no_vars-empty.catala_en
  | 
7 |   context y content integer
  |           ^
  + Test

[RESULT] No two exceptions to ever overlap for this variable

[RESULT] For this variable:
 --> test_proof/bad/no_vars-empty.catala_en
  | 
7 |   context y content integer
  |           ^
  + Test

[ERROR] The variable definition might return an empty error

[RESULT] For this variable:
 --> test_proof/bad/no_vars-empty.catala_en
  | 
6 |   context x content integer
  |           ^
  + Test

[RESULT] No two exceptions to ever overlap for this variable

[RESULT] For this variable:
 --> test_proof/bad/no_vars-empty.catala_en
  | 
6 |   context x content integer
  |           ^
  + Test

[RESULT] The variable definition never returns an empty error

